--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,14 +33,8 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
 
-      - name: Add Custom Domain - calendar.carlosguerrero.com
-        run: pnpm exec wrangler deploy --custom-domain calendar.carlosguerrero.com || echo "Custom domain already exists or failed to add"
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-
-      - name: Add Custom Domain - whatsapp.carlosguerrero.com
-        run: pnpm exec wrangler deploy --custom-domain whatsapp.carlosguerrero.com || echo "Custom domain already exists or failed to add"
+      - name: Deploy to Custom Domains
+        run: pnpm exec wrangler deploy --domains calendar.carlosguerrero.com whatsapp.carlosguerrero.com
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
