Use hardcoded redirects, remove gist dependency

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -41,6 +41,10 @@
 	 */
 	"routes": [
 		{
+			"pattern": "carlosguerrero.com",
+			"custom_domain": true
+		},
+		{
 			"pattern": "calendar.carlosguerrero.com",
 			"custom_domain": true
 		},
